- 调整 ComponentSchema、ComponentPropertySchema 中的属性 - 增加 ComponentStyleSchema、ComponentEventSchema，并增加 StyleSetting、EventSetting 基础逻辑

--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/GridWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/GridWrap.razor
@@ -43,11 +43,6 @@
             RegisterEventDispatcher();
     }
 
-    protected override bool ShouldRender()
-    {
-        return false;
-    }
-
     private void Init()
     {
         if (_component == null)
@@ -78,7 +73,7 @@
         }
 
         var component = _component.CopyNew();
-        component.ComponentCategory = ComponentCategory.Container;
+        component.IsContainerComponent = true;
         component.ComponentProperty.ExtensionData.Add(key, key);
         component.ParentId = Component.Id;
 
