--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/TabsWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/TabsWrap.razor
@@ -77,7 +77,7 @@
             return c;
 
         var component = _component.CopyNew();
-        component.ComponentCategory = ComponentCategory.Container;
+        component.IsContainerComponent = true;
         component.ComponentProperty.ExtensionData.Add(key, key);
         component.ParentId = Component.Id;
 
