--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/LayoutWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/LayoutWrap.razor
@@ -30,11 +30,6 @@
             RegisterEventDispatcher();
     }
 
-    protected override bool ShouldRender()
-    {
-        return false;
-    }
-
     private void Init()
     {
         if (_component == null)
@@ -64,7 +59,7 @@
         }
 
         var component = _component.CopyNew();
-        component.ComponentCategory = ComponentCategory.Container;
+        component.IsContainerComponent = true;
         component.ComponentProperty.ExtensionData.Add(key, key);
         component.ParentId = Component.Id;
 
